Added instructions in some notebooks

--- a/tgw3d/src/spatial_arrangement_2.ipynb
+++ b/tgw3d/src/spatial_arrangement_2.ipynb
@@ -6,14 +6,64 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "spatial_arrangement_2 (generic function with 2 methods)"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling LinearAlgebraicRepresentation [95167b0c-186a-594b-a231-52369c6de044]\n",
+      "└ @ Base loading.jl:1278\n",
+      "ERROR: LoadError: Triangle is not properly installed. Please run\n",
+      "Pkg.build(\"Triangle\")\n",
+      "Stacktrace:\n",
+      " [1] error(::String) at .\\error.jl:33\n",
+      " [2] top-level scope at C:\\Users\\daria\\.julia\\packages\\Triangle\\gYrhQ\\src\\Triangle.jl:11\n",
+      " [3] include(::Function, ::Module, ::String) at .\\Base.jl:380\n",
+      " [4] include(::Module, ::String) at .\\Base.jl:368\n",
+      " [5] top-level scope at none:2\n",
+      " [6] eval at .\\boot.jl:331 [inlined]\n",
+      " [7] eval(::Expr) at .\\client.jl:467\n",
+      " [8] top-level scope at .\\none:3\n",
+      "in expression starting at C:\\Users\\daria\\.julia\\packages\\Triangle\\gYrhQ\\src\\Triangle.jl:10\n",
+      "ERROR: LoadError: LoadError: LoadError: Failed to precompile Triangle [56f361f5-126b-55db-87fb-1c71988fcde4] to C:\\Users\\daria\\.julia\\compiled\\v1.5\\Triangle\\Zuza2_yxmkL.ji.\n",
+      "Stacktrace:\n",
+      " [1] error(::String) at .\\error.jl:33\n",
+      " [2] compilecache(::Base.PkgId, ::String) at .\\loading.jl:1305\n",
+      " [3] _require(::Base.PkgId) at .\\loading.jl:1030\n",
+      " [4] require(::Base.PkgId) at .\\loading.jl:928\n",
+      " [5] require(::Module, ::Symbol) at .\\loading.jl:923\n",
+      " [6] include(::Function, ::Module, ::String) at .\\Base.jl:380\n",
+      " [7] include at .\\Base.jl:368 [inlined]\n",
+      " [8] include(::String) at C:\\Users\\daria\\.julia\\packages\\LinearAlgebraicRepresentation\\qwzGL\\src\\arrangement\\arrangement.jl:1\n",
+      " [9] top-level scope at C:\\Users\\daria\\.julia\\packages\\LinearAlgebraicRepresentation\\qwzGL\\src\\arrangement\\arrangement.jl:11\n",
+      " [10] include(::Function, ::Module, ::String) at .\\Base.jl:380\n",
+      " [11] include at .\\Base.jl:368 [inlined]\n",
+      " [12] include(::String) at C:\\Users\\daria\\.julia\\packages\\LinearAlgebraicRepresentation\\qwzGL\\src\\LinearAlgebraicRepresentation.jl:1\n",
+      " [13] top-level scope at C:\\Users\\daria\\.julia\\packages\\LinearAlgebraicRepresentation\\qwzGL\\src\\LinearAlgebraicRepresentation.jl:113\n",
+      " [14] include(::Function, ::Module, ::String) at .\\Base.jl:380\n",
+      " [15] include(::Module, ::String) at .\\Base.jl:368\n",
+      " [16] top-level scope at none:2\n",
+      " [17] eval at .\\boot.jl:331 [inlined]\n",
+      " [18] eval(::Expr) at .\\client.jl:467\n",
+      " [19] top-level scope at .\\none:3\n",
+      "in expression starting at C:\\Users\\daria\\.julia\\packages\\LinearAlgebraicRepresentation\\qwzGL\\src\\arrangement\\minimal_cycles.jl:1\n",
+      "in expression starting at C:\\Users\\daria\\.julia\\packages\\LinearAlgebraicRepresentation\\qwzGL\\src\\arrangement\\arrangement.jl:11\n",
+      "in expression starting at C:\\Users\\daria\\.julia\\packages\\LinearAlgebraicRepresentation\\qwzGL\\src\\LinearAlgebraicRepresentation.jl:113\n"
+     ]
+    },
+    {
+     "ename": "LoadError",
+     "evalue": "Failed to precompile LinearAlgebraicRepresentation [95167b0c-186a-594b-a231-52369c6de044] to C:\\Users\\daria\\.julia\\compiled\\v1.5\\LinearAlgebraicRepresentation\\z0SUB_yxmkL.ji.",
+     "output_type": "error",
+     "traceback": [
+      "Failed to precompile LinearAlgebraicRepresentation [95167b0c-186a-594b-a231-52369c6de044] to C:\\Users\\daria\\.julia\\compiled\\v1.5\\LinearAlgebraicRepresentation\\z0SUB_yxmkL.ji.",
+      "",
+      "Stacktrace:",
+      " [1] error(::String) at .\\error.jl:33",
+      " [2] compilecache(::Base.PkgId, ::String) at .\\loading.jl:1305",
+      " [3] _require(::Base.PkgId) at .\\loading.jl:1030",
+      " [4] require(::Base.PkgId) at .\\loading.jl:928",
+      " [5] require(::Module, ::Symbol) at .\\loading.jl:923",
+      " [6] include_string(::Function, ::Module, ::String, ::String) at .\\loading.jl:1091"
+     ]
     }
    ],
    "source": [
@@ -25,8 +75,8 @@
     "\t\trcopEV::Lar.ChainOp,\n",
     "\t\trcopFE::Lar.ChainOp, multiproc::Bool=false)\n",
     "\n",
-    "\trcopCF = Lar.build_copFC(rV, rcopEV, rcopFE)\n",
-    "\t#rcopCF = Lar.Arrangement.minimal_3cycles(rV, rcopEV, rcopFE)\n",
+    "\t#rcopCF = Lar.build_copFC(rV, rcopEV, rcopFE)\n",
+    "\trcopCF = Lar.Arrangement.minimal_3cycles(rV, rcopEV, rcopFE)\n",
     "    return rV, rcopEV, rcopFE, rcopCF\n",
     "end\n"
    ]
@@ -40,26 +90,14 @@
    "outputs": [
     {
      "ename": "LoadError",
-     "evalue": "MethodError: Cannot `convert` an object of type Array{Base.Generator{Array{Int64,1},LinearAlgebraicRepresentation.var\"#86#91\"{Array{Array{Int64,1},1}}},1} to an object of type Int64\nClosest candidates are:\n  convert(::Type{T}, !Matched::T) where T<:Number at number.jl:6\n  convert(::Type{T}, !Matched::Number) where T<:Number at number.jl:7\n  convert(::Type{T}, !Matched::Ptr) where T<:Integer at pointer.jl:23\n  ...",
+     "evalue": "UndefVarError: LinearAlgebraicRepresentation not defined",
      "output_type": "error",
      "traceback": [
-      "MethodError: Cannot `convert` an object of type Array{Base.Generator{Array{Int64,1},LinearAlgebraicRepresentation.var\"#86#91\"{Array{Array{Int64,1},1}}},1} to an object of type Int64\nClosest candidates are:\n  convert(::Type{T}, !Matched::T) where T<:Number at number.jl:6\n  convert(::Type{T}, !Matched::Number) where T<:Number at number.jl:7\n  convert(::Type{T}, !Matched::Ptr) where T<:Integer at pointer.jl:23\n  ...",
+      "UndefVarError: LinearAlgebraicRepresentation not defined",
       "",
       "Stacktrace:",
-      " [1] setindex!(::Array{Int64,1}, ::Array{Base.Generator{Array{Int64,1},LinearAlgebraicRepresentation.var\"#86#91\"{Array{Array{Int64,1},1}}},1}, ::Int64) at .\\array.jl:847",
-      " [2] _unsafe_copyto!(::Array{Int64,1}, ::Int64, ::Array{Array{Base.Generator{Array{Int64,1},LinearAlgebraicRepresentation.var\"#86#91\"{Array{Array{Int64,1},1}}},1},1}, ::Int64, ::Int64) at .\\array.jl:257",
-      " [3] unsafe_copyto! at .\\array.jl:311 [inlined]",
-      " [4] _copyto_impl! at .\\array.jl:335 [inlined]",
-      " [5] copyto! at .\\array.jl:321 [inlined]",
-      " [6] copyto! at .\\array.jl:347 [inlined]",
-      " [7] copyto_axcheck! at .\\abstractarray.jl:946 [inlined]",
-      " [8] Array at .\\array.jl:562 [inlined]",
-      " [9] convert(::Type{Array{Int64,1}}, ::Array{Array{Base.Generator{Array{Int64,1},LinearAlgebraicRepresentation.var\"#86#91\"{Array{Array{Int64,1},1}}},1},1}) at .\\array.jl:554",
-      " [10] build_copFC(::Array{Float64,2}, ::SparseMatrixCSC{Int8,Int64}, ::SparseMatrixCSC{Int8,Int64}) at C:\\Users\\daria\\.julia\\packages\\LinearAlgebraicRepresentation\\qwzGL\\src\\utilities.jl:123",
-      " [11] spatial_arrangement_2(::Array{Float64,2}, ::SparseMatrixCSC{Int8,Int64}, ::SparseMatrixCSC{Int8,Int64}, ::Bool) at .\\In[1]:9",
-      " [12] top-level scope at .\\timing.jl:174 [inlined]",
-      " [13] top-level scope at .\\In[2]:0",
-      " [14] include_string(::Function, ::Module, ::String, ::String) at .\\loading.jl:1091"
+      " [1] top-level scope at In[2]:1",
+      " [2] include_string(::Function, ::Module, ::String, ::String) at .\\loading.jl:1091"
      ]
     }
    ],
