--- a/tgw3d/src/Frag_face.ipynb
+++ b/tgw3d/src/Frag_face.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "frag_face (generic function with 1 method)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20,6 +20,7 @@
     "function frag_face(V, EV, FE, sp_idx, sigma)\n",
     "\n",
     "    vs_num = size(V, 1)\n",
+    "    \n",
     "\n",
     "\t# 2D transformation of sigma face\n",
     "    sigmavs = (abs.(FE[sigma:sigma,:])*abs.(EV))[1,:].nzind\n",
@@ -43,20 +44,21 @@
     "    end\n",
     "    nvsize = size(nV, 1)\n",
     "    nV = [nV zeros(nvsize) ones(nvsize)]*inv(M)[:, 1:3] ## ????\n",
+    "    #print(typeof((sigmavs)))\n",
     "    return nV, nEV, nFE\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000993 seconds (4.89 k allocations: 306.305 KiB)\n"
+      "Array{Int64,1}  0.002639 seconds (4.95 k allocations: 308.602 KiB)\n"
      ]
     },
     {
@@ -77,7 +79,7 @@
        "  [1, 4]  =  -1)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,19 +122,20 @@
     "        0  0 -1  0  0  0  1 -1  0  0  1  0;\n",
     "        0  0  0  1 -1  0  0  1  0  0  0 -1;\n",
     "    ])\n",
+    "\n",
     "@time frag_face(Lar.Points(V),EV,FE,[2,3,4,5],2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  621.000 μs (4891 allocations: 306.30 KiB)\n"
+      "  630.600 μs (4891 allocations: 306.30 KiB)\n"
      ]
     },
     {
@@ -153,18 +156,19 @@
        "  [1, 4]  =  -1)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "using BenchmarkTools\n",
     "@btime frag_face(Lar.Points(V),EV,FE,[2,3,4,5],2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,13 +177,15 @@
        "duetrasf (generic function with 1 method)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function duetrasf(V,EV,FE,sigma,vs_num) \n",
+    "\n",
+    "#function duetrasf(V,EV,FE,sigma,vs_num)\n",
+    "function duetrasf(V::Lar.Points,EV::Lar.ChainOp,FE::Lar.ChainOp,sigma::Int,vs_num::Int) \n",
     "  \n",
     "    sigmavs = (abs.(FE[sigma:sigma,:])*abs.(EV))[1,:].nzind\n",
     "    sV = V[sigmavs, :]\n",
@@ -195,31 +201,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "sigma (generic function with 2 methods)"
+       "sigma (generic function with 1 method)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function sigma(tV,EV,FE,sV,sEV,sp_idx,sigma)\n",
+    "#Tuple{Array{Float64,2},SparseMatrixCSC{Int8,Int64},SparseMatrixCSC{Int8,Int64},Array{Any,2},SparseMatrixCSC{Int8,Int64},Array{Int64,1},Int64\n",
+    "#function sigma(tV,EV,FE,sV,sEV,sp_idx,sigma)\n",
+    "#function sigma(tV::Array,EV::Lar.ChainOp,FE::Lar.ChainOp,sV::Array,sEV::Lar.ChainOp,sp_idx::Array,sigma::Int)\n",
+    "function sigma(tV::Tuple{Array{Float64,2}},EV::SparseMatrixCSC{Int8,Int64},FE::SparseMatrixCSC{Int8,Int64},sV::Array{Any,2},sEV::SparseMatrixCSC{Int8,Int64},sp_idx::Array{Int64,1},sigma::Int64,)\n",
+    "\n",
+    "    \n",
     "    for i in sp_idx[sigma]\n",
     "        tmpV, tmpEV = Lar.Arrangement.face_int(tV, EV, FE[i, :])\n",
     "\n",
     "        sV, sEV = Lar.skel_merge(sV, sEV, tmpV, tmpEV)\n",
     "    \n",
     "    end\n",
-    "    return tmpV,tmpEV,sV,sEV\n",
+    "    return sV,sEV\n",
     "    \n",
-    "end\n",
+    "    end\n",
     "        \n",
     "        \n",
     "    \n"
@@ -227,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -236,13 +247,14 @@
        "arrsigma (generic function with 1 method)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function arrsigma(V,EF,FE,sp_idx,sigma)\n",
+    "#function arrsigma(sV,sEV,sigmavs,M)\n",
+    "function arrsigma(sV::Array,sEV::Lar.ChainOp,sigmavs::Array,M::Array)\n",
     "    sV = sV[:, 1:2]\n",
     "    nV, nEV, nFE = Lar.Arrangement.planar_arrangement(sV, sEV, sparsevec(ones(Int8, length(sigmavs))))\n",
     "    if nV == nothing ## not possible !! ... (each original face maps to its decomposition)\n",
@@ -251,13 +263,13 @@
     "    nvsize = size(nV, 1)\n",
     "    nV = [nV zeros(nvsize) ones(nvsize)]*inv(M)[:, 1:3] ## ????\n",
     "    \n",
-    "    return sV,nV,nEV,nFE,nsize\n",
+    "    return nV,nEV,nFE\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -266,18 +278,39 @@
        "frag_faceOTT (generic function with 1 method)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "function frag_faceOTT(V, EV, FE, sp_idx, sigma)\n",
+    "#function frag_faceOTT(V::Lar.Points, EV::Lar.ChainOp, FE::Lar.ChainOp, sp_idx::Array, sigma::Int)\n",
+    "    \n",
+    "    \n",
     "    vs_num = size(V, 1)\n",
     "    tV,sV,sEV,M,sigmavs = duetrasf(V,EV,FE,sigma,vs_num)\n",
-    "    tmpV,tmpEV,sV,sEV = sigma(tV,EV,FE,sV,sEV,sp_idx,sigma)\n",
-    "    sV,nV,nEV,nFE,nsize= arrsigma(sV,sEV,sigmavs,nsize,nV)\n",
     "    \n",
+    "    \n",
+    "    #sV,sEV= sigma(tV,EV,FE,sV,sEV,sp_idx,sigma)\n",
+    "    #sigma face intersection with faces in sp_idx[sigma]\n",
+    "    \n",
+    "    Threads.@threads for i in sp_idx[sigma]\n",
+    "        tmpV, tmpEV = Lar.Arrangement.face_int(tV, EV, FE[i, :])\n",
+    "\n",
+    "      sV, sEV = Lar.skel_merge(sV, sEV, tmpV, tmpEV)\n",
+    "     end\n",
+    "\n",
+    "    # computation of 2D arrangement of sigma face\n",
+    "    nV,nEV,nFE = arrsigma(sV,sEV,sigmavs,M)\n",
+    "    #sV = sV[:, 1:2]\n",
+    "    #nV, nEV, nFE = Lar.Arrangement.planar_arrangement(sV, sEV, sparsevec(ones(Int8, length(sigmavs))))\n",
+    "    #if nV == nothing ## not possible !! ... (each original face maps to its decomposition)\n",
+    "        #return [], spzeros(Int8, 0,0), spzeros(Int8, 0,0)\n",
+    "    #end\n",
+    "    #nvsize = size(nV, 1)\n",
+    "    #nV = [nV zeros(nvsize) ones(nvsize)]*inv(M)[:, 1:3] ## ????\n",
+    "    #print(typeof((vs_num,sV,sEV)))\n",
     "    return nV, nEV, nFE\n",
     "\n",
     "end\n"
@@ -285,22 +318,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "MethodError: objects of type Int64 are not callable",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: objects of type Int64 are not callable",
-      "",
-      "Stacktrace:",
-      " [1] frag_faceOTT(::Array{Float64,2}, ::SparseMatrixCSC{Int8,Int64}, ::SparseMatrixCSC{Int8,Int64}, ::Array{Int64,1}, ::Int64) at .\\In[100]:4",
-      " [2] top-level scope at .\\timing.jl:174 [inlined]",
-      " [3] top-level scope at .\\In[101]:0",
-      " [4] include_string(::Function, ::Module, ::String, ::String) at .\\loading.jl:1091"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.001729 seconds (3.94 k allocations: 255.125 KiB)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "([0.0 0.0 0.0; 0.0 1.0 0.0; 0.0 0.0 1.0; 0.0 1.0 1.0], \n",
+       "  [1, 1]  =  -1\n",
+       "  [2, 1]  =  -1\n",
+       "  [1, 2]  =  1\n",
+       "  [3, 2]  =  -1\n",
+       "  [2, 3]  =  1\n",
+       "  [4, 3]  =  -1\n",
+       "  [3, 4]  =  1\n",
+       "  [4, 4]  =  1, \n",
+       "  [1, 1]  =  1\n",
+       "  [1, 2]  =  -1\n",
+       "  [1, 3]  =  1\n",
+       "  [1, 4]  =  -1)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -341,7 +389,48 @@
     "        0  0 -1  0  0  0  1 -1  0  0  1  0;\n",
     "        0  0  0  1 -1  0  0  1  0  0  0 -1;\n",
     "    ])\n",
-    "@time frag_faceOTT(Lar.Points(V),EV,FE,[2,4,5],3)"
+    "@time frag_faceOTT(Lar.Points(V),EV,FE,[2,4,5],3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  497.500 μs (3936 allocations: 255.13 KiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "([0.0 0.0 0.0; 0.0 1.0 0.0; 0.0 0.0 1.0; 0.0 1.0 1.0], \n",
+       "  [1, 1]  =  -1\n",
+       "  [2, 1]  =  -1\n",
+       "  [1, 2]  =  1\n",
+       "  [3, 2]  =  -1\n",
+       "  [2, 3]  =  1\n",
+       "  [4, 3]  =  -1\n",
+       "  [3, 4]  =  1\n",
+       "  [4, 4]  =  1, \n",
+       "  [1, 1]  =  1\n",
+       "  [1, 2]  =  -1\n",
+       "  [1, 3]  =  1\n",
+       "  [1, 4]  =  -1)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "using BenchmarkTools\n",
+    "\n",
+    "@btime frag_faceOTT(Lar.Points(V),EV,FE,[2,4,5],3)"
    ]
   },
   {
