--- a/tgw3d/src/spatial_arrangement.ipynb
+++ b/tgw3d/src/spatial_arrangement.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "spatial_arrangement (generic function with 2 methods)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,14 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.160210 seconds (170.72 k allocations: 8.820 MiB)\n"
+      " 14.075805 seconds (36.45 M allocations: 1.819 GiB, 3.63% gc time)\n"
      ]
     },
     {
@@ -56,7 +56,7 @@
        " [11, 10, 9, 8, 5, 6, 7, 12, 4, 3, 2, 1]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,14 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  6.923 ms (54897 allocations: 3.17 MiB)\n"
+      "  6.732 ms (54897 allocations: 3.17 MiB)\n"
      ]
     },
     {
@@ -118,13 +118,89 @@
        " [11, 10, 9, 8, 5, 6, 7, 12, 4, 3, 2, 1]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "@btime spatial_arrangement(Lar.Points(V),Lar.ChainOp(EV),Lar.ChainOp(FE),false)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "InterruptException:",
+     "output_type": "error",
+     "traceback": [
+      "InterruptException:",
+      "",
+      "Stacktrace:",
+      " [1] try_yieldto(::typeof(Base.ensure_rescheduled)) at .\\task.jl:656",
+      " [2] wait at .\\task.jl:713 [inlined]",
+      " [3] wait(::Base.GenericCondition{ReentrantLock}) at .\\condition.jl:106",
+      " [4] take_unbuffered(::Channel{Tuple}) at .\\channels.jl:405",
+      " [5] take!(::Channel{Tuple}) at .\\channels.jl:381",
+      " [6] take!(::Distributed.RemoteValue) at D:\\buildbot\\worker\\package_win64\\build\\usr\\share\\julia\\stdlib\\v1.5\\Distributed\\src\\remotecall.jl:599",
+      " [7] take_ref(::Distributed.RRID, ::Int64) at D:\\buildbot\\worker\\package_win64\\build\\usr\\share\\julia\\stdlib\\v1.5\\Distributed\\src\\remotecall.jl:610",
+      " [8] call_on_owner at D:\\buildbot\\worker\\package_win64\\build\\usr\\share\\julia\\stdlib\\v1.5\\Distributed\\src\\remotecall.jl:492 [inlined]",
+      " [9] take!(::Distributed.RemoteChannel{Channel{Tuple}}) at D:\\buildbot\\worker\\package_win64\\build\\usr\\share\\julia\\stdlib\\v1.5\\Distributed\\src\\remotecall.jl:626",
+      " [10] spatial_arrangement_1(::Array{Float64,2}, ::SparseMatrixCSC{Int8,Int64}, ::SparseMatrixCSC{Int8,Int64}, ::Bool) at C:\\Users\\daria\\.julia\\packages\\LinearAlgebraicRepresentation\\qwzGL\\src\\arrangement\\spatial_arrangement.jl:176",
+      " [11] spatial_arrangement(::Array{Float64,2}, ::SparseMatrixCSC{Int8,Int64}, ::SparseMatrixCSC{Int8,Int64}, ::Bool) at .\\In[2]:12",
+      " [12] ##core#277() at C:\\Users\\daria\\.julia\\packages\\BenchmarkTools\\eCEpo\\src\\execution.jl:371",
+      " [13] ##sample#278(::BenchmarkTools.Parameters) at C:\\Users\\daria\\.julia\\packages\\BenchmarkTools\\eCEpo\\src\\execution.jl:377",
+      " [14] _run(::BenchmarkTools.Benchmark{Symbol(\"##benchmark#276\")}, ::BenchmarkTools.Parameters; verbose::Bool, pad::String, kwargs::Base.Iterators.Pairs{Symbol,Integer,NTuple{4,Symbol},NamedTuple{(:samples, :evals, :gctrial, :gcsample),Tuple{Int64,Int64,Bool,Bool}}}) at C:\\Users\\daria\\.julia\\packages\\BenchmarkTools\\eCEpo\\src\\execution.jl:405",
+      " [15] (::Base.var\"#inner#2\"{Base.Iterators.Pairs{Symbol,Integer,NTuple{5,Symbol},NamedTuple{(:verbose, :samples, :evals, :gctrial, :gcsample),Tuple{Bool,Int64,Int64,Bool,Bool}}},typeof(BenchmarkTools._run),Tuple{BenchmarkTools.Benchmark{Symbol(\"##benchmark#276\")},BenchmarkTools.Parameters}})() at .\\essentials.jl:713",
+      " [16] #invokelatest#1 at .\\essentials.jl:714 [inlined]",
+      " [17] #run_result#37 at C:\\Users\\daria\\.julia\\packages\\BenchmarkTools\\eCEpo\\src\\execution.jl:32 [inlined]",
+      " [18] run(::BenchmarkTools.Benchmark{Symbol(\"##benchmark#276\")}, ::BenchmarkTools.Parameters; progressid::Nothing, nleaves::Float64, ndone::Float64, kwargs::Base.Iterators.Pairs{Symbol,Integer,NTuple{5,Symbol},NamedTuple{(:verbose, :samples, :evals, :gctrial, :gcsample),Tuple{Bool,Int64,Int64,Bool,Bool}}}) at C:\\Users\\daria\\.julia\\packages\\BenchmarkTools\\eCEpo\\src\\execution.jl:94",
+      " [19] #warmup#45 at C:\\Users\\daria\\.julia\\packages\\BenchmarkTools\\eCEpo\\src\\execution.jl:141 [inlined]",
+      " [20] warmup(::BenchmarkTools.Benchmark{Symbol(\"##benchmark#276\")}) at C:\\Users\\daria\\.julia\\packages\\BenchmarkTools\\eCEpo\\src\\execution.jl:141",
+      " [21] top-level scope at C:\\Users\\daria\\.julia\\packages\\BenchmarkTools\\eCEpo\\src\\execution.jl:481",
+      " [22] include_string(::Function, ::Module, ::String, ::String) at .\\loading.jl:1091"
+     ]
+    }
+   ],
+   "source": [
+    "@btime spatial_arrangement(Lar.Points(V),Lar.ChainOp(EV),Lar.ChainOp(FE),true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "InterruptException:",
+     "output_type": "error",
+     "traceback": [
+      "InterruptException:",
+      "",
+      "Stacktrace:",
+      " [1] try_yieldto(::typeof(Base.ensure_rescheduled)) at .\\task.jl:656",
+      " [2] wait at .\\task.jl:713 [inlined]",
+      " [3] wait(::Base.GenericCondition{ReentrantLock}) at .\\condition.jl:106",
+      " [4] take_unbuffered(::Channel{Tuple}) at .\\channels.jl:405",
+      " [5] take!(::Channel{Tuple}) at .\\channels.jl:381",
+      " [6] take!(::Distributed.RemoteValue) at D:\\buildbot\\worker\\package_win64\\build\\usr\\share\\julia\\stdlib\\v1.5\\Distributed\\src\\remotecall.jl:599",
+      " [7] take_ref(::Distributed.RRID, ::Int64) at D:\\buildbot\\worker\\package_win64\\build\\usr\\share\\julia\\stdlib\\v1.5\\Distributed\\src\\remotecall.jl:610",
+      " [8] call_on_owner at D:\\buildbot\\worker\\package_win64\\build\\usr\\share\\julia\\stdlib\\v1.5\\Distributed\\src\\remotecall.jl:492 [inlined]",
+      " [9] take!(::Distributed.RemoteChannel{Channel{Tuple}}) at D:\\buildbot\\worker\\package_win64\\build\\usr\\share\\julia\\stdlib\\v1.5\\Distributed\\src\\remotecall.jl:626",
+      " [10] spatial_arrangement_1(::Array{Float64,2}, ::SparseMatrixCSC{Int8,Int64}, ::SparseMatrixCSC{Int8,Int64}, ::Bool) at C:\\Users\\daria\\.julia\\packages\\LinearAlgebraicRepresentation\\qwzGL\\src\\arrangement\\spatial_arrangement.jl:176",
+      " [11] spatial_arrangement(::Array{Float64,2}, ::SparseMatrixCSC{Int8,Int64}, ::SparseMatrixCSC{Int8,Int64}, ::Bool) at .\\In[2]:12",
+      " [12] top-level scope at .\\timing.jl:174 [inlined]",
+      " [13] top-level scope at .\\In[6]:0",
+      " [14] include_string(::Function, ::Module, ::String, ::String) at .\\loading.jl:1091"
+     ]
+    }
+   ],
+   "source": [
+    "@time spatial_arrangement(Lar.Points(V),Lar.ChainOp(EV),Lar.ChainOp(FE),true)"
    ]
   },
   {
